Add connected_components and graph dfs function

--- a/lab03.ipynb
+++ b/lab03.ipynb
@@ -14,6 +14,200 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "037b3007",
+   "metadata": {},
+   "source": [
+    "### Thuật toán phân hoạch trên đồ thị\n",
+    "\n",
+    "Trong đoạn chương trình bên dưới, hàm connected_components nhận vào một đồ thị và trả về danh sách các thành phần liên thông trong đồ thị. Hàm dfsvisit nhận vào một đỉnh và trả về thành phần liên thông xuất phát từ đỉnh đó."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2314b261",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Vertex:\n",
+    "    def __init__(self,key):\n",
+    "        self.id = key\n",
+    "        self.connectedTo = {}\n",
+    "        self.distance = 0\n",
+    "        self.prevNode = None\n",
+    "        self.visited = False\n",
+    "        self.discovery = 0\n",
+    "        self.finish = 0\n",
+    "\n",
+    "    def addNeighbor(self,nbr,weight=0):\n",
+    "        self.connectedTo[nbr] = weight\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return str(self.id) + ' connectedTo: ' + str([x.id for x in self.connectedTo])\n",
+    "\n",
+    "    def getConnections(self):\n",
+    "        return self.connectedTo.keys()\n",
+    "\n",
+    "    def getId(self):\n",
+    "        return self.id\n",
+    "\n",
+    "    def getDistance(self):\n",
+    "        return self.distance\n",
+    "\n",
+    "    def getVisited(self):\n",
+    "        return self.visited\n",
+    "\n",
+    "    def getPrev(self):\n",
+    "        return self.prevNode\n",
+    "\n",
+    "    def getWeight(self,nbr):\n",
+    "        return self.connectedTo[nbr]\n",
+    "\n",
+    "    def setDistance(self,d = 0):\n",
+    "        self.distance = d\n",
+    "\n",
+    "    def setPrev(self,prev = None):\n",
+    "        self.prevNode = prev\n",
+    "\n",
+    "    def setVisited(self, status):\n",
+    "        self.visited = status\n",
+    "\n",
+    "    def setDiscovery(self,d = 0):\n",
+    "        self.discovery = d\n",
+    "\n",
+    "    def setFinish(self,d = 0):\n",
+    "        self.finish = d\n",
+    "\n",
+    "class Graph:\n",
+    "    def __init__(self):\n",
+    "        self.vertList = {}\n",
+    "        self.numVertices = 0\n",
+    "\n",
+    "\n",
+    "    def addVertex(self,key):\n",
+    "        self.numVertices = self.numVertices + 1\n",
+    "        newVertex = Vertex(key)\n",
+    "        self.vertList[key] = newVertex\n",
+    "        return newVertex\n",
+    "\n",
+    "\n",
+    "    def getVertex(self,n):\n",
+    "        if n in self.vertList:\n",
+    "            return self.vertList[n]\n",
+    "        else:\n",
+    "            return None\n",
+    "\n",
+    "\n",
+    "    def __contains__(self,n):\n",
+    "        return n in self.vertList\n",
+    "\n",
+    "\n",
+    "    def addEdge(self,f,t,weight=0):\n",
+    "        if f not in self.vertList:\n",
+    "            nv = self.addVertex(f)\n",
+    "        if t not in self.vertList:\n",
+    "            nv = self.addVertex(t)\n",
+    "        self.vertList[f].addNeighbor(self.vertList[t], weight)\n",
+    "\n",
+    "\n",
+    "    def getVertices(self):\n",
+    "        return self.vertList.keys()\n",
+    "\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return iter(self.vertList.values())\n",
+    "\n",
+    "class DFSGraph(Graph):\n",
+    "  def __init__(self):\n",
+    "    super().__init__()\n",
+    "    self.time = 0\n",
+    "\n",
+    "  def connected_components(self):\n",
+    "      for aVertex in self:\n",
+    "          aVertex.setVisited(False)\n",
+    "          aVertex.setPrev(-1)\n",
+    "          \n",
+    "      components = []\n",
+    "      for aVertex in self:\n",
+    "          print(aVertex)\n",
+    "          if aVertex.getVisited() == False:\n",
+    "              component = []\n",
+    "              self.dfsvisit(aVertex, component)\n",
+    "              components.append(component)\n",
+    "      \n",
+    "      return components\n",
+    "\n",
+    "  def dfsvisit(self, startVertex, component):\n",
+    "      startVertex.setVisited(True)\n",
+    "      component.append(startVertex.getId())\n",
+    "      for nbr in startVertex.getConnections():\n",
+    "          if nbr.getVisited() == False:\n",
+    "              nbr.setPrev(startVertex)\n",
+    "              self.dfsvisit(nbr, component)\n",
+    "      startVertex.setVisited(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1f361540",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A connectedTo: ['B', 'C']\n",
+      "B connectedTo: ['D', 'E']\n",
+      "C connectedTo: ['F', 'G']\n",
+      "D connectedTo: ['H']\n",
+      "E connectedTo: ['I']\n",
+      "F connectedTo: ['J']\n",
+      "G connectedTo: ['K']\n",
+      "H connectedTo: []\n",
+      "I connectedTo: []\n",
+      "J connectedTo: []\n",
+      "K connectedTo: []\n",
+      "W connectedTo: ['T']\n",
+      "T connectedTo: []\n",
+      "[['A', 'B', 'D', 'H', 'E', 'I', 'C', 'F', 'J', 'G', 'K'], ['W', 'T']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "g = DFSGraph()\n",
+    "g.addEdge('A', 'B')\n",
+    "g.addEdge('A', 'C')\n",
+    "g.addEdge('B', 'D')\n",
+    "g.addEdge('B', 'E')\n",
+    "g.addEdge('C', 'F')\n",
+    "g.addEdge('C', 'G')\n",
+    "g.addEdge('D', 'H')\n",
+    "g.addEdge('E', 'I')\n",
+    "g.addEdge('F', 'J')\n",
+    "g.addEdge('G', 'K')\n",
+    "g.addEdge('W', 'T')\n",
+    "\n",
+    "# Perform a DFS starting at first vertex ('A')\n",
+    "# Return list of connected components from graph \n",
+    "components = g.connected_components() \n",
+    "\n",
+    "# Print the components (In this example there are 2 components)\n",
+    "print(components)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "66ae6016",
+   "metadata": {},
+   "source": [
+    "### Giải bài toán tô màu bằng phương pháp phân hoạch đồ thị"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "11f858e2-c2ab-4ad8-8a65-b59d7af83835",
@@ -177,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
